# product-categorization

./: .gitignore  product-sorter.cabal  stack.yaml
app/: Main.hs
